--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -1,9 +1,9 @@
 {% extends 'base.twig' %}
-{% import "macros.twig" as macros %}
+{% import 'macros.twig' as macros %}
 
-{% set page_title = 'Credential : ' ~ credential.name %}
+{% set page_title = 'Credential - ' ~ credential.name %}
 
-{% set isSuper = isUserSuper(current_user) %}
+{% set is_admin = current_authorizations.isSuper() %}
 
 {% block content %}
 
@@ -11,94 +11,119 @@
         {{ macros.alert('error', 'Unable to decrypt value! Encryption may be misconfigured.') }}
     {% endif %}
 
-    <h1>Credentials - <b>{{ credential.name }}</b></h1>
+    <div class="nav--page">
+        <h1>Credential</h1>
 
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ uriFor('credentials') }}">Back to Credentials</a>
+        </p>
+    </div>
+
+    {{ block('meta_table') }}
+    {{ block('credential_details') }}
+
+    <h2>Applications</h2>
+    <p>TODO: Show what is using this credential</p>
+
+    <ul class="list--bare">
+        <li>
+            {% if is_admin %}
+                <a class="btn btn--action" href="{{ uriFor('credential.edit', {'credential': credential.id}) }}">Edit Credential</a>
+            {% else %}
+                <button class="btn btn--disabled">Edit Credential</button>
+            {% endif %}
+        </li>
+        <li>
+            {% if is_admin %}
+                <a class="btn btn--destructive" href="{{ uriFor('credential.remove', {'credential': credential.id}) }}">Remove Credential</a>
+            {% else %}
+                <button class="btn btn--disabled">Remove Credential</button>
+            {% endif %}
+        </li>
+    </ul>
+
+{% endblock %}
+
+{% block meta_table %}
     <div class="details-box">
-        <ul class="mbn">
-            <li>Name</li>
-            <li>{{ credential.name }}</li>
-
-            <li>Type</li>
+        <ul>
             <li>
-                {% if credential.type == 'aws' %}
-                    AWS
+                <h6>Name</h6>
+                {{ credential.name }}
+            </li>
+
+            <li>
+                <h6>Type</h6>
+                {% if credential.type == 'aws_static' %}
+                    AWS Static Token
+                {% elseif credential.type == 'aws_role' %}
+                    AWS STS Role
                 {% elseif credential.type == 'privatekey' %}
                     Private Key
                 {% endif %}
             </li>
+
+            <li>
+                <h6>Internal Credential?</h6>
+                {% if credential.isInternal %}
+                    {{ macros.icon('locked') }}
+                    Yes, for Administrative use only
+                {% else %}
+                    No
+                {% endif %}
+            </li>
         </ul>
     </div>
+{% endblock %}
 
-    {% if credential.type == 'aws' %}
+{% block credential_details %}
+    {% if credential.type == 'aws_static' %}
 
         <h3>AWS Access Key</h3>
-        <p>{{ credential.aws.key }}</p>
+        <p>{{ credential.details.key }}</p>
 
         <h3>AWS Secret</h3>
-        {% if decryption_error %}
-            <p>Unable to decrypt value. Encryption may be misconfigured.</p>
-
-        {% else %}
-            <p>
+        <p>
+            {% if is_decryption_error %}
+                Unable to decrypt value. Encryption may be misconfigured.
+            {% else %}
                 <code>{{ decrypted }}</code>
                 <br><small>This value is only visible to administrators.</small>
-            </p>
-        {% endif %}
+            {% endif %}
+        </p>
+
+    {% elseif credential.type == 'aws_role' %}
+        <h3>AWS Account ID</h3>
+        <p>{{ credential.details.account }}</p>
+
+        <h3>AWS Role</h3>
+        <p><code>{{ credential.details.role }}</code></p>
 
     {% elseif credential.type == 'privatekey' %}
 
         <h3>Username</h3>
-        <p>{{ credential.privatekey.username }}</p>
+        <p>{{ credential.details.username }}</p>
 
-        <h3>Private Key path</h3>
-        <p>{{ credential.privatekey.path }}</p>
+        <h3>Private Key Path</h3>
+        <p>
+            {% if credential.details.path %}
+                <code>{{ credential.details.path }}</code>
+            {% else %}
+                N/A
+            {% endif %}
+        </p>
 
-        <h3>Private Key file</h3>
-        <p><code>secret</code></p>
+        <h3>Private Key File</h3>
+        <p>
+            {% if is_decryption_error %}
+                Unable to decrypt value. Encryption may be misconfigured.
+            {% elseif credential.details.file %}
+                <pre>{{ decrypted }}</pre>
+                <br><small>This value is only visible to administrators.</small>
+            {% else %}
+                N/A
+            {% endif %}
+        </p>
 
     {% endif %}
-
-    <h3>Application Deployments</h3>
-    {% if targets %}
-        <table class="table--spacing-medium table--striped">
-            <thead>
-                <tr>
-                    <th>Application</th>
-                    <th>Environment</th>
-                    <th>Deployment</th>
-                    <th class="t10"></th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for target in targets %}
-
-                <tr>
-                    <td>
-                        <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
-                    </td>
-                    <td>
-                        {{ target.server.environment.name }}
-                    </td>
-                    <td>
-                        {{ target.formatPretty(true) }}
-                    </td>
-                    <td class="tr">
-                        <a class="btn btn--tiny" href="{{ uriFor('target', {'application': target.application.id, 'target': target.id}) }}">View</a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>There are no deployment targets associated with these credentials.</p>
-    {% endif %}
-
-    <ul>
-        <li><a class="btn" href="{{ uriFor('admin.credentials') }}">All Credentials</a></li>
-
-        {% if isSuper %}
-                <li><a class="btn btn--destructive" href="{{ uriFor('admin.credential.remove', {'credential': credential.id}) }}">Remove Credentials</a></li>
-        {% endif %}
-    </ul>
-
 {% endblock %}
