--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -1,25 +1,34 @@
 {% extends 'base.twig' %}
+{% import 'macros.twig' as macros %}
 
 {% set page_title = "Credentials" %}
 
-{% set isSuper = isUserSuper(current_user) %}
+{% set is_admin = current_authorizations.isSuper() %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
 
     <p>
         Credentials can be stored and encrypted in the Hal database for use by deployments.
-        <b>Currently, credentials can only be used by AWS-based deployments.</b>
     </p>
+
+    {{ block('cred_table') }}
 
     <p>
-        Eventually, ssh deployments will use these credentials, but today is not yet that day.
+        {% if is_admin %}
+            <a class="btn" href="{{ uriFor('credential.add') }}">Add Credentials</a>
+        {% else %}
+            <button class="btn btn--disabled">Add Credentials</button>
+        {% endif %}
     </p>
 
+{% endblock %}
+
+{% block cred_table %}
     {% if credentials %}
         <table class="table--spacing-medium table--striped">
             <thead>
-                <tr class="tl">
+                <tr>
                     <th>ID</th>
                     <th>Type</th>
                     <th>Name</th>
@@ -29,11 +38,16 @@
             <tbody>
                 {% for credential in credentials %}
                     <tr>
+                        <td>{{ credential|shortGUID }}</td>
                         <td>
-                            <a href="{{ uriFor('admin.credential', {'credential': credential.id }) }}">{{ credential.id[:7] }}</a></td>
-                        <td>
-                            {% if credential.type == 'aws' %}
-                                AWS
+                            {% if credential.isInternal %}
+                                {{ macros.icon('locked') }}
+                            {% endif %}
+
+                            {% if credential.type == 'aws_static' %}
+                                AWS Static Token
+                            {% elseif credential.type == 'aws_role' %}
+                                AWS STS Role
                             {% elseif credential.type == 'privatekey' %}
                                 Private Key
                             {% endif %}
@@ -41,11 +55,18 @@
 
                         <td>{{ credential.name }}</td>
                         <td>
-                            {% if credential.type == 'aws' %}
-                                Key: <code>{{ credential.aws.key }}</code>
+                            {% if credential.type == 'aws_static' %}
+                                Key: <code>{{ credential.details.key }}</code>
+
+                            {% elseif credential.type == 'aws_role' %}
+                                Account: <code>{{ credential.details.account }}</code>
+
                             {% elseif credential.type == 'privatekey' %}
-                                Username: <code>{{ credential.privatekey.username }}</code>
+                                Username: <code>{{ credential.details.username }}</code>
                             {% endif %}
+                        </td>
+                        <td>
+                            <a href="{{ uriFor('credential', {'credential': credential.id}) }}">View</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -54,11 +75,4 @@
     {% else %}
         <p>There are no credentials stored.</p>
     {% endif %}
-
-    {% if isSuper %}
-        <ul>
-            <li><a class="btn" href="{{ uriFor('admin.credential.add') }}">Add Credentials</a></li>
-        </ul>
-    {% endif %}
-
 {% endblock %}
