--- a/templates/group/group.add.twig
+++ b/templates/group/group.add.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import "macros.form.twig" as form_macros %}
 
-{% set page_title = 'Add Server' %}
+{% set page_title = 'Add Group' %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
@@ -11,16 +11,14 @@
     <form method="post">
         <ul class="form-fields">
             <li>
-                <label for="servertype">Type</label>
+                <label for="grouptype">Type</label>
                 <ul class="radio-grid radio-grid--tri">
 
-                    {% set server_types = ['rsync', 'eb', 'cd', 's3', 'script'] %}
-
-                    {% for type in server_types %}
-                        {% set isSelected = form.server_type == type ? ' checked' : '' %}
+                    {% for type in group_types %}
+                        {% set isSelected = form.group_type == type ? ' checked' : '' %}
                         <li>
-                            <input id="server_type-{{ type }}" type="radio" name="server_type" value="{{ type }}"{{ isSelected }}>
-                            <label for="server_type-{{ type }}">
+                            <input id="group_type-{{ type }}" type="radio" name="group_type" value="{{ type }}"{{ isSelected }}>
+                            <label for="group_type-{{ type }}">
                                 {%- if type == 'rsync' %}
                                     On-premise Linux (Rsync)
                                 {%- elseif type == 'eb' -%}
@@ -57,21 +55,31 @@
                 <li>
                     <label for="hostname">Hostname</label>
                     <input type="text" name="hostname" id="hostname" maxlength="60" value="{{ form.hostname }}" class="text-input">
-                    <small class="additional">Rsync Servers Only</small>
-                </li>
-
-                <li>
-                    <label for="region">Region</label>
-                    <input type="text" name="region" id="region" maxlength="60" value="{{ form.region }}" class="text-input">
-                    <small class="additional">AWS Servers Only</small>
+                    <small class="additional">Rsync Groups Only</small>
                 </li>
             </ul>
+        </div>
 
+        <ul class="form-fields">
+            <label>Region</label>
+            <ul class="radio-grid radio-grid--tri radio-grid--checked">
+                {% for region in aws_regions %}
+                    {% set isSelected = (region == form.region) ? ' checked' : '' %}
+
+                    <li>
+                        <input id="region-{{ region }}" type="radio" name="region" value="{{ region }}"{{ isSelected }}>
+                        <label for="region-{{ region }}">{{ region }}</label>
+                    </li>
+                {% endfor %}
+            </ul>
+            <small class="additional">AWS Servers Only</small>
+        </ul>
+
+        <div class="form-wrapper">
             <ul>
-                <li><input class="btn btn--action" type="submit" value="Add Server"></li>
-                <li><a class="btn" href="{{ uriFor('servers') }}">Cancel</a></li>
+                <li><input class="btn btn--action" type="submit" value="Add Group"></li>
+                <li><a class="btn" href="{{ uriFor('groups') }}">Cancel</a></li>
             </ul>
-
         </div>
 
     </form>
