--- a/templates/group/group.edit.twig
+++ b/templates/group/group.edit.twig
@@ -1,26 +1,25 @@
 {% extends 'base.twig' %}
 {% import "macros.form.twig" as form_macros %}
 
-{% set page_title = 'Edit Server : ' ~ server.name %}
+{% set name = (group.type() == 'script') ? 'Script' : group.name() %}
+{% set page_title = 'Edit Group : ' ~ name %}
 
 {% block content %}
-    <h1>Edit Server - <b>{{ server.name }}</b></h1>
+    <h1>Edit Group - {{ group.format(false) }} <b>{{ group.environment.name }}</b></h1>
 
     {{ form_macros.formErrors(errors) }}
 
     <form method="post">
         <ul class="form-fields">
             <li>
-                <label for="servertype">Type</label>
+                <label for="grouptype">Type</label>
                 <ul class="radio-grid radio-grid--tri">
 
-                    {% set server_types = ['rsync', 'eb', 'cd', 's3', 'script'] %}
-
-                    {% for type in server_types %}
-                        {% set isSelected = form.server_type == type ? ' checked' : '' %}
+                    {% for type in group_types %}
+                        {% set isSelected = form.group_type == type ? ' checked' : '' %}
                         <li>
-                            <input id="server_type-{{ type }}" type="radio" name="server_type" value="{{ type }}"{{ isSelected }}>
-                            <label for="server_type-{{ type }}">
+                            <input id="group_type-{{ type }}" type="radio" name="group_type" value="{{ type }}"{{ isSelected }}>
+                            <label for="group_type-{{ type }}">
                                 {%- if type == 'rsync' %}
                                     On-premise Linux (Rsync)
                                 {%- elseif type == 'eb' -%}
@@ -54,24 +53,33 @@
 
         <div class="form-wrapper">
             <ul class="form-fields">
-                {% set hostname = form.server_type == 'rsync' ? form.hostname : '' %}
+                {% set hostname = form.group_type == 'rsync' ? form.hostname : '' %}
                 <li>
                     <label for="hostname">Hostname</label>
                     <input type="text" name="hostname" id="hostname" maxlength="60" value="{{ hostname }}" class="text-input">
-                    <small class="additional">Rsync Servers Only</small>
-                </li>
-
-                {% set region = form.server_type != 'rsync' ? form.region : '' %}
-                <li>
-                    <label for="region">Region</label>
-                    <input type="text" name="region" id="region" maxlength="60" value="{{ region }}" class="text-input">
-                    <small class="additional">AWS Servers Only</small>
+                    <small class="additional">Rsync Groups Only</small>
                 </li>
             </ul>
+        </div>
+
+        <ul class="form-fields">
+            <label>Region</label>
+            <ul class="radio-grid radio-grid--tri radio-grid--checked">
+                {% for region in aws_regions %}
+                    {% set isSelected = (region == form.region) ? ' checked' : '' %}
+
+                    <li>
+                        <input id="region-{{ region }}" type="radio" name="region" value="{{ region }}"{{ isSelected }}>
+                        <label for="region-{{ region }}">{{ region }}</label>
+                    </li>
+                {% endfor %}
+            </ul>
+            <small class="additional">AWS Servers Only</small>
+        </ul>
 
             <ul>
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li><a class="btn" href="{{ uriFor('server', {'server': server.id}) }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('group', {'group': group.id}) }}">Cancel</a></li>
             </ul>
         </div>
 
