--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -5,7 +5,8 @@
 
 {% set page_title = "Status : " ~ application.name %}
 
-{% set canUserBuild = canUserBuild(current_user, application) %}
+{#{% set canUserBuild = canUserBuild(current_user, application) %}#}
+{% set canUserBuild = true %}
 {% set isBusinessTime = is_serious_business_mode %}
 
 {% block content %}
@@ -66,7 +67,7 @@
         <div>
             <ul class="list--bare cards">
                 {% for status in deployment_statuses %}
-                    <li data-deploy="{{ status.deploy.id }}">{{ page_macros.pushCard(application, status.deploy, status.latest) }}</li>
+                    <li data-deploy="{{ status.target.id }}">{{ page_macros.pushCard(application, status.target, status.latest) }}</li>
                 {% endfor %}
             </ul>
         </div>
@@ -88,22 +89,23 @@
     </ul>
 {% endblock %}
 
-{% macro pushCard(application, deployment, active) %}
+{% macro pushCard(application, target, active) %}
     {% import 'macros.twig' as macros %}
+    {% import 'macros.git.twig' as git_macros %}
 
     <article class="card">
         <header class="card__header">
             <h4>
-                <a href="{{ uriFor('server', {'server': deployment.server.id}) }}">{{ deployment.formatPretty }}</a>
+                <a href="{{ uriFor('server', {'server': target.group.id}) }}">{{ target.format }}</a>
 
-                {% if deployment.url %}
-                    <a class="icon--link" href="{{ deployment.url }}">
+                {% if target.url %}
+                    <a class="icon--link" href="{{ target.url }}">
                         {{ macros.icon('outgoing') }}
                     </a>
                 {% endif %}
 
                 {% if active %}
-                    <a class="rollback icon--link" href="{{ uriFor('rollback.page1', {'application': application.id, 'target': deployment.id}) }}" title="View push history or rollback to a successful build">
+                    <a class="rollback icon--link" href="{{ uriFor('rollback.page1', {'application': application.id, 'target': target.id}) }}" title="View push history or rollback to a successful build">
                         {{ macros.icon('revert') }}
                     </a>
                 {% endif %}
@@ -114,7 +116,7 @@
             <ul>
                 {# push details #}
                 <li>
-                    <span>Last push:</span>
+                    <span>Last Release:</span>
                     {% if active %}
                         {{ macros.job_status(active, true) }}
                         (<a href="{{ uriFor('push', {'push': active.id}) }}">{{ active.id|formatPushId }}</a>)
@@ -123,7 +125,7 @@
                     {% endif %}
                 </li>
                 <li>
-                    <span>Pushed on:</span>
+                    <span>Released on:</span>
                     {% if active.created %}
                         {{ active.created|html5date }}
                     {% else %}
@@ -143,8 +145,8 @@
                 <li>
                     <span>Reference:</span>
                     {% if active %}
-                        {% set isCurrent = githubCommitIsCurrent(application.githubOwner, application.githubRepo, active.build.branch, active.build.commit) %}
-                        {{ macros.gitref(active.build, true, isCurrent, true) }}
+                        {% set isCurrent = githubCommitIsCurrent(application.github.owner, application.github.repository, active.build.reference, active.build.commit) %}
+                        {{ git_macros.gitref(active.build, true, isCurrent, true) }}
 
                     {% else %}
                         Unknown
@@ -153,7 +155,7 @@
                 <li>
                     <span>Commit:</span>
                     {% if active %}
-                        {{ macros.gitcommit(active.build) }}
+                        {{ git_macros.gitcommit(active.build) }}
                     {% else %}
                         Unknown
                     {% endif %}
