start build and start release(mostly)

--- a/templates/_partial-job/pending-table.twig
+++ b/templates/_partial-job/pending-table.twig
@@ -1,4 +1,5 @@
 {% import "macros.twig" as macros %}
+{% import "macros.git.twig" as git_macros %}
 
 <table id="js-queue" class="table--spacing-medium">
     <thead>
@@ -21,7 +22,7 @@
 
                         <td>{{ job.environment.name }}
 
-                        <td>{{ macros.gitref(job, true) }}</td>
+                        <td>{{ git_macros.gitref(job, true) }}</td>
                         <td class="table-priority-55">{{ job.user ? job.user.handle : 'Unknown' }}</td>
                         <td class="table-priority-50">{{ job.created|timepoint('h:i:s A') }}</td>
                     </tr>
