--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -2,7 +2,7 @@
 {% import 'macros.twig' as macros %}
 {% set js_components = ["push.info"] %}
 
-{% set page_title = "Push : " ~ push.application.name %}
+{% set page_title = "Release : " ~ push.application.name %}
 
 {% block content %}
 
