--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -2,7 +2,7 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.pagination.twig' as pagination %}
 
-{% set page_title = "Push History : " ~ application.name %}
+{% set page_title = "Release History : " ~ application.name %}
 
 {% block content %}
 
