--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -6,7 +6,7 @@
     {% set js_components = ["queue"] %}
 {% endif %}
 
-{% set page_title = "Build and Push History" %}
+{% set page_title = "Build and Release History" %}
 {% set paginationblock = pagination.time_pagination(selected_date, 'queue.history') %}
 
 {% block content %}
